--- a/src/parts/header/nav-product/_nav-product.scss
+++ b/src/parts/header/nav-product/_nav-product.scss
@@ -3,10 +3,7 @@
     justify-content: space-between;
     margin-bottom: 90px;
     margin-top: 20px;
-
-    * {
-        z-index: 1;
-    }
+    z-index: 1;
     
     &__btn {
         flex: 0 1 19%;
