--- a/src/parts/header/top/_top.scss
+++ b/src/parts/header/top/_top.scss
@@ -4,7 +4,7 @@
     position: fixed;
     width: 100%;
     height: 50px;
-    z-index: 15;
+    z-index: 999;
     background-color: $color-alpha;
 
     &__container {
